objects/ContentVersion.object
<CustomObject>
    <fields>
        <fullName>Content_Version_Five__c</fullName>
        <label>Content Version Five</label>
        <length>26</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Version_Four__c</fullName>
        <label>Content Version Four</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Content_Version_One__c</fullName>
        <label>Content Version One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Content_Version_Three__c</fullName>
        <label>Content Version Three</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Content_Version_Two__c</fullName>
        <label>Content Version Two</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
</CustomObject>